# GEWINN

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  GEWINN_v2_5_to_current_CHANGE_MANIFEST.yaml  GEWINN_v2_5_to_current_CODEX_CHANGELOG.md  GEWINN_v2_5_to_current_consolidated_update.docx  Makefile  README.md  body_armor.csv  common_armor_kits.csv  helmets.csv  melee_weapons.csv  occult_implements.csv  pyproject.toml  ranged_weapons.csv  shields.csv
.github/workflows/: validate.yml
archive/: README.md
archive/imported-reports/: GEWINN_top_20_optimal_builds.md
archive/v2.5-baseline/: GEWINN_v2.5.docx
artifacts/: MANIFEST.md
data/: README.md
data/equipment/: arms_armor.csv  leg_armor.csv  proofing.csv
data/magic/: sacred_relics.csv
data/schemas/: table_schemas.json
docs/: BOOTSTRAP_REPORT.md  CANONICAL_SOURCES.md  IMPORT_INVENTORY.md  OPEN_QUESTIONS.md  PROJECT_STATUS.md  WORKFLOW.md
docs/adr/: 0001-canonical-source-hierarchy.md  0002-data-is-source-of-truth.md  0003-generated-artifact-policy.md
manuscript/: AGENTS.md  README.md
manuscript/source/: MANUSCRIPT_STATUS.md
migration/v2.5-current/: GEWINN_v2_5_to_current_CHANGE_MANIFEST.yaml  GEWINN_v2_5_to_current_CODEX_CHANGELOG.md  README.md
playtest/: README.md
simulations/: AGENTS.md  README.md  __init__.py  registry.yaml
tests/: test_common.py  test_simulation_smoke.py  test_validation.py
tools/: __init__.py  common.py  generate_tables.py  status.py  term_allowlist.tsv  validate_csv_schema.py  validate_kits.py  validate_manifest.py  validate_slots.py  validate_terms.py
(+8 files in other folders)
